--- a/AR_220727/Packages/manifest.json
+++ b/AR_220727/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-10.8.4.tgz",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.15.16",
     "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.15",
